--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -3033,6 +3033,68 @@
             </objects>
             <point key="canvasLocation" x="-378" y="2143"/>
         </scene>
+        <!--Analyze View Controller-->
+        <scene sceneID="weH-MK-KJ2">
+            <objects>
+                <viewController storyboardIdentifier="AnalyzeViewController" id="6n0-HH-sqF" customClass="AnalyzeViewController" customModule="AI_MUNJANG" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="idA-j9-VeB">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="분석하고자 하는 하나의 문장을 입력하세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FNj-TX-hrD">
+                                <rect key="frame" x="20" y="68" width="374" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="hwe-gq-ola"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1nY-Ai-xhg">
+                                <rect key="frame" x="314" y="280" width="80" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="92D-cH-V90"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="분석하기 &gt;">
+                                    <color key="titleColor" red="0.015686274510000001" green="0.74901960779999999" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickedAnalyze:" destination="6n0-HH-sqF" eventType="touchUpInside" id="GJX-l7-huN"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="usU-Nq-yio" customClass="CustomTextView" customModule="AI_MUNJANG" customModuleProvider="target">
+                                <rect key="frame" x="20" y="118" width="374" height="150"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="LhZ-gK-XwU"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Ddy-dV-7iY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="usU-Nq-yio" firstAttribute="top" secondItem="FNj-TX-hrD" secondAttribute="bottom" constant="20" id="7nw-Bu-OXB"/>
+                            <constraint firstItem="usU-Nq-yio" firstAttribute="leading" secondItem="Ddy-dV-7iY" secondAttribute="leading" constant="20" id="DC2-gV-6Ux"/>
+                            <constraint firstItem="Ddy-dV-7iY" firstAttribute="trailing" secondItem="1nY-Ai-xhg" secondAttribute="trailing" constant="20" id="Dph-QO-II9"/>
+                            <constraint firstItem="FNj-TX-hrD" firstAttribute="top" secondItem="Ddy-dV-7iY" secondAttribute="top" constant="24" id="YRQ-tM-RYD"/>
+                            <constraint firstItem="Ddy-dV-7iY" firstAttribute="trailing" secondItem="usU-Nq-yio" secondAttribute="trailing" constant="20" id="eqa-2J-2yn"/>
+                            <constraint firstItem="FNj-TX-hrD" firstAttribute="leading" secondItem="Ddy-dV-7iY" secondAttribute="leading" constant="20" id="gRn-ej-lJq"/>
+                            <constraint firstItem="1nY-Ai-xhg" firstAttribute="top" secondItem="usU-Nq-yio" secondAttribute="bottom" constant="12" id="nOV-2t-ztA"/>
+                            <constraint firstItem="Ddy-dV-7iY" firstAttribute="trailing" secondItem="FNj-TX-hrD" secondAttribute="trailing" constant="20" id="vv8-IZ-uEb"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="analyzeButton" destination="1nY-Ai-xhg" id="Zlj-dh-UBb"/>
+                        <outlet property="analyzeSentenceCustomTextView" destination="usU-Nq-yio" id="Hhw-O3-ki8"/>
+                        <outlet property="titleLabel" destination="FNj-TX-hrD" id="dgp-R9-0ro"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j8U-6R-ndY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="389" y="2334"/>
+        </scene>
     </scenes>
     <designables>
         <designable name="pVQ-02-xFM">
